mol_state_shared extra fetching

--- a/-/package.json
+++ b/-/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my_debug_ftp",
+  "name": "my_debug",
   "version": "0.0.1",
   "main": "node.js",
   "module": "node.esm.js",
@@ -7,8 +7,6 @@
   "types": "web.d.ts",
   "dependencies": {
     "jsdom": "*",
-    "colorette": "*",
-    "chokidar": "*",
-    "ftp": "*"
+    "colorette": "*"
   }
 }
