--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,3 +10,9 @@ jobs:
       with:
         token: ${{ secrets.GH_PAT }}
         package: 'my/debug'
+    - name: Deploy on GitHub Pages
+      if: github.ref == 'refs/heads/master'
+      uses: alex-page/blazing-fast-gh-pages-deploy@v1.1.0
+      with:
+        repo-token: ${{ secrets.GH_PAT }}
+        site-directory: 'my/debug/-'
