--- a/package.json
+++ b/package.json
@@ -5,9 +5,189 @@
   "module": "node.esm.js",
   "browser": "web.js",
   "types": "web.d.ts",
+  "keywords": [
+    "$my_debug",
+    "$my",
+    "$mol_page",
+    "$mol",
+    "$mol_style_unit",
+    "$mol_style",
+    "$mol_decor",
+    "$mol_style_func",
+    "$mol_style_define",
+    "$mol_view_view",
+    "$mol_view",
+    "$mol_style_attach",
+    "$mol_after_tick",
+    "$mol_after",
+    "$mol_object2",
+    "$mol_ambient",
+    "$mol_owning",
+    "$mol_delegate",
+    "$mol_fail_hidden",
+    "$mol_fail",
+    "$mol_type_writable",
+    "$mol_type",
+    "$mol_dom_context",
+    "$mol_dom",
+    "$mol_dom_context_context.ts",
+    "$node",
+    "$node_node.ts",
+    "$node_modules",
+    "$mol_exec",
+    "$mol_log3",
+    "$mol_log3_log3.ts",
+    "$mol_tree",
+    "$mol_deprecated",
+    "$mol_env",
+    "$mol_env_env.ts",
+    "$mol_theme",
+    "$mol_skin",
+    "$mol_window",
+    "$mol_object",
+    "$mol_mem",
+    "$mol_wire_mem",
+    "$mol_wire",
+    "$mol_wire_sub",
+    "$mol_wire_pub",
+    "$mol_wire_cursor",
+    "$mol_wire_fiber",
+    "$mol_wire_pub_sub",
+    "$mol_dev_format",
+    "$mol_dev",
+    "$mol_compare_deep",
+    "$mol_compare",
+    "$mol_key",
+    "$mol_guid",
+    "$mol_after_frame",
+    "$mol_after_timeout",
+    "$mol_wire_method",
+    "$mol_fail_log",
+    "$mol_fail_catch",
+    "$mol_view_selection",
+    "$mol_memo",
+    "$mol_wrapper",
+    "$mol_dom_qname",
+    "$mol_const",
+    "$mol_dom_render_attributes",
+    "$mol_dom_render",
+    "$mol_wire_async",
+    "$mol_plugin",
+    "$mol_dom_render_styles",
+    "$mol_dom_render_children",
+    "$mol_dom_render_fields",
+    "$mol_func_name",
+    "$mol_func",
+    "$mol_type_pick",
+    "$mol_type_keys_extract",
+    "$mol_type_keys",
+    "$mol_style_guard",
+    "$mol_type_result",
+    "$mol_type_error",
+    "$mol_style_properties",
+    "$mol_type_override",
+    "$mol_style_pseudo",
+    "$mol_style_sheet",
+    "$mol_gap",
+    "$mol_scroll",
+    "$mol_scroll_-view.tree_scroll.view.tree.ts",
+    "$mol_scroll_scroll.view.tree",
+    "$mol_print",
+    "$mol_dom_listener",
+    "$mol_page_-view.tree_page.view.tree.ts",
+    "$mol_link_source",
+    "$mol_link",
+    "$mol_link_-view.tree_link.view.tree.ts",
+    "$mol_link_link.view.tree",
+    "$mol_state_arg",
+    "$mol_state",
+    "$mol_locale",
+    "$mol_state_local",
+    "$mol_file",
+    "$mol_file_file.ts",
+    "$mol_charset_decode",
+    "$mol_charset",
+    "$mol_charset_encode",
+    "$mol_mem_cached",
+    "$mol_wire_probe",
+    "$mol_compare_array",
+    "$mol_icon_github_circle",
+    "$mol_icon_github",
+    "$mol_icon",
+    "$mol_icon_icon.view.tree",
+    "$mol_icon_-view.tree_icon.view.tree.ts",
+    "$mol_svg_root",
+    "$mol_svg",
+    "$mol_svg_-view.tree_svg.view.tree.ts",
+    "$mol_svg_svg.view.tree",
+    "$mol_state_time",
+    "$mol_svg_root_root.view.tree",
+    "$mol_svg_root_-view.tree_root.view.tree.ts",
+    "$mol_svg_path",
+    "$mol_svg_path_-view.tree_path.view.tree.ts",
+    "$mol_icon_github_circle_-view.tree_circle.view.tree.ts",
+    "$mol_link_source_-view.tree_source.view.tree.ts",
+    "$mol_button_major",
+    "$mol_button",
+    "$mol_button_button.view.tree",
+    "$mol_button_-view.tree_button.view.tree.ts",
+    "$mol_speck",
+    "$mol_speck_speck.view.tree",
+    "$mol_speck_-view.tree_speck.view.tree.ts",
+    "$mol_keyboard",
+    "$mol_button_major_major.view.tree",
+    "$mol_button_major_-view.tree_major.view.tree.ts",
+    "$mol_button_typed",
+    "$mol_button_typed_typed.view.tree",
+    "$mol_button_typed_-view.tree_typed.view.tree.ts",
+    "$my_debug_-view.tree_debug.view.tree.ts",
+    "$my_debug_debug.view.tree",
+    "$mol_state_shared",
+    "$mol_wire_sync",
+    "$hyoo_crowd_chunk",
+    "$hyoo_crowd",
+    "$hyoo",
+    "$mol_report_bugsnag",
+    "$mol_report",
+    "$mol_db",
+    "$mol_db_db.ts",
+    "$mol_db_transaction",
+    "$mol_db_store",
+    "$mol_db_index",
+    "$mol_db_response",
+    "$mol_db_database",
+    "$hyoo_crowd_clock",
+    "$mol_hash_string",
+    "$mol_hash",
+    "$mol_crypto_auditor",
+    "$mol_crypto",
+    "$mol_base64_encode",
+    "$mol_base64",
+    "$mol_base64_encode_encode.ts",
+    "$mol_base64_decode",
+    "$mol_base64_decode_decode.ts",
+    "$hyoo_crowd_doc",
+    "$hyoo_crowd_struct",
+    "$hyoo_crowd_node",
+    "$mol_jsx",
+    "$mol_type_partial_deep",
+    "$mol_type_partial",
+    "$hyoo_crowd_list",
+    "$mol_reconcile",
+    "$hyoo_crowd_reg",
+    "$hyoo_crowd_text",
+    "$hyoo_crowd_tokenizer",
+    "$mol_regexp",
+    "$mol_type_merge",
+    "$mol_type_equals",
+    "$mol_type_intersect",
+    "$mol_unicode",
+    "$mol_action"
+  ],
   "dependencies": {
     "jsdom": "*",
     "colorette": "*",
-    "chokidar": "*"
+    "chokidar": "*",
+    "fake-indexeddb": "*"
   }
 }
