Deployed using Blazing fast GitHub Pages deploy

--- a/package.json
+++ b/package.json
@@ -140,6 +140,9 @@
     "$mol_button_typed",
     "$mol_button_typed_typed.view.tree",
     "$mol_button_typed_-view.tree_typed.view.tree.ts",
+    "$mol_row",
+    "$mol_row_row.view.tree",
+    "$mol_row_-view.tree_row.view.tree.ts",
     "$my_debug_-view.tree_debug.view.tree.ts",
     "$my_debug_debug.view.tree",
     "$mol_state_shared",
