--- a/package.json
+++ b/package.json
@@ -8,13 +8,9 @@
   "keywords": [
     "$my_debug",
     "$my",
-    "$mol_page",
-    "$mol",
-    "$mol_style_unit",
-    "$mol_style",
-    "$mol_decor",
-    "$mol_style_func",
     "$mol_style_define",
+    "$mol_style",
+    "$mol",
     "$mol_view_view",
     "$mol_view",
     "$mol_style_attach",
@@ -39,6 +35,9 @@
     "$mol_term",
     "$mol_env",
     "$mol_theme",
+    "$mol_style_func",
+    "$mol_style_unit",
+    "$mol_decor",
     "$mol_gap",
     "$mol_window",
     "$mol_object",
@@ -81,7 +80,6 @@
     "$mol_dom_render_fields",
     "$mol_func_name",
     "$mol_func",
-    "$mol_after_work",
     "$mol_type_pick",
     "$mol_type_keys_extract",
     "$mol_type_keys",
@@ -92,42 +90,102 @@
     "$mol_type_override",
     "$mol_style_pseudo",
     "$mol_style_sheet",
-    "$mol_scroll",
-    "$mol_print",
+    "$hyoo_sync_client",
+    "$hyoo_sync",
+    "$hyoo",
+    "$hyoo_sync_yard",
+    "$mol_wire_sync",
+    "$hyoo_sync_peer",
+    "$mol_state_local",
+    "$mol_state",
+    "$hyoo_crowd_peer",
+    "$hyoo_crowd",
+    "$mol_int62",
+    "$mol_charset_encode",
+    "$mol_charset",
+    "$mol_crypto_auditor",
+    "$mol_crypto",
+    "$mol_crypto_native",
+    "$hyoo_crowd_world",
+    "$hyoo_crowd_land",
+    "$hyoo_crowd_unit",
+    "$mol_data_enum",
+    "$mol_data",
+    "$mol_data_setup",
+    "$mol_data_value",
+    "$mol_data_error",
+    "$mol_error_mix",
+    "$mol_error",
+    "$mol_diff_path",
+    "$mol_diff",
+    "$mol_charset_decode",
+    "$mol_charset_encoding",
+    "$hyoo_crowd_clock",
+    "$hyoo_crowd_time",
+    "$hyoo_crowd_node",
+    "$hyoo_crowd_struct",
+    "$hyoo_crowd_reg",
+    "$mol_dict",
+    "$mol_action",
+    "$mol_wire_race",
+    "$mol_wire_solid",
+    "$hyoo_sync_masters",
+    "$mol_db",
+    "$mol_db_transaction",
+    "$mol_db_store",
+    "$mol_db_index",
+    "$mol_db_response",
+    "$mol_db_database",
+    "$mol_string",
+    "$mol_hotkey",
+    "$mol_keyboard",
     "$mol_dom_listener",
-    "$mol_link_source",
+    "$hyoo_sync_online",
     "$mol_link",
     "$mol_icon",
     "$mol_svg_root",
     "$mol_svg",
     "$mol_state_time",
-    "$mol_state",
     "$mol_svg_path",
     "$mol_state_arg",
+    "$mol_avatar",
+    "$mol_hash_string",
+    "$mol_hash",
+    "$mol_icon_sync_off",
+    "$mol_icon_sync",
+    "$mol_link_source",
     "$mol_locale",
-    "$mol_state_local",
     "$mol_file",
-    "$mol_charset_decode",
-    "$mol_charset",
-    "$mol_charset_encode",
     "$mol_mem_cached",
     "$mol_compare_array",
     "$mol_icon_github_circle",
     "$mol_icon_github",
-    "$mol_check_list",
+    "$mol_lights_toggle",
+    "$mol_lights",
+    "$mol_media",
+    "$mol_check_icon",
     "$mol_check",
     "$mol_button_minor",
     "$mol_button",
     "$mol_speck",
-    "$mol_keyboard",
     "$mol_button_typed",
     "$mol_maybe",
+    "$mol_icon_brightness_6",
+    "$mol_icon_brightness",
     "$mol_list",
     "$mol_support_css",
-    "$mol_support"
+    "$mol_support",
+    "$mol_print",
+    "$mol_page",
+    "$mol_scroll",
+    "$mol_icon_cursor_default",
+    "$mol_icon_cursor",
+    "$hyoo_crowd_list",
+    "$mol_reconcile"
   ],
   "dependencies": {
     "jsdom": "*",
+    "fake-indexeddb": "*",
     "chokidar": "*"
   }
 }
