--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "keywords": [
     "$my_debug",
     "$my",
-    "$mol_style_define",
+    "$mol_style_unit",
     "$mol_style",
     "$mol",
+    "$mol_decor",
+    "$mol_style_define",
     "$mol_view_view",
     "$mol_view",
     "$mol_style_attach",
@@ -36,8 +38,6 @@
     "$mol_env",
     "$mol_theme",
     "$mol_style_func",
-    "$mol_style_unit",
-    "$mol_decor",
     "$mol_gap",
     "$mol_window",
     "$mol_object",
@@ -90,102 +90,87 @@
     "$mol_type_override",
     "$mol_style_pseudo",
     "$mol_style_sheet",
-    "$hyoo_sync_client",
-    "$hyoo_sync",
-    "$hyoo",
-    "$hyoo_sync_yard",
-    "$mol_wire_sync",
-    "$hyoo_sync_peer",
-    "$mol_state_local",
-    "$mol_state",
-    "$hyoo_crowd_peer",
-    "$hyoo_crowd",
-    "$mol_int62",
-    "$mol_charset_encode",
-    "$mol_charset",
-    "$mol_crypto_auditor",
-    "$mol_crypto",
-    "$mol_crypto_native",
-    "$hyoo_crowd_world",
-    "$hyoo_crowd_land",
-    "$hyoo_crowd_unit",
-    "$mol_data_enum",
-    "$mol_data",
-    "$mol_data_setup",
-    "$mol_data_value",
-    "$mol_data_error",
-    "$mol_error_mix",
-    "$mol_error",
-    "$mol_diff_path",
-    "$mol_diff",
-    "$mol_charset_decode",
-    "$mol_charset_encoding",
-    "$hyoo_crowd_clock",
-    "$hyoo_crowd_time",
-    "$hyoo_crowd_node",
-    "$hyoo_crowd_struct",
-    "$hyoo_crowd_reg",
-    "$mol_dict",
-    "$mol_action",
-    "$mol_wire_race",
-    "$mol_wire_solid",
-    "$hyoo_sync_masters",
-    "$mol_db",
-    "$mol_db_transaction",
-    "$mol_db_store",
-    "$mol_db_index",
-    "$mol_db_response",
-    "$mol_db_database",
-    "$mol_string",
-    "$mol_hotkey",
-    "$mol_keyboard",
+    "$mol_book2",
+    "$mol_scroll",
+    "$mol_print",
     "$mol_dom_listener",
-    "$hyoo_sync_online",
+    "$mol_mem_cached",
+    "$mol_link_source",
     "$mol_link",
     "$mol_icon",
     "$mol_svg_root",
     "$mol_svg",
     "$mol_state_time",
+    "$mol_state",
     "$mol_svg_path",
     "$mol_state_arg",
-    "$mol_avatar",
-    "$mol_hash_string",
-    "$mol_hash",
-    "$mol_icon_sync_off",
-    "$mol_icon_sync",
-    "$mol_link_source",
     "$mol_locale",
+    "$mol_state_local",
     "$mol_file",
-    "$mol_mem_cached",
+    "$mol_charset_decode",
+    "$mol_charset",
+    "$mol_charset_encoding",
+    "$mol_charset_encode",
     "$mol_compare_array",
     "$mol_icon_github_circle",
     "$mol_icon_github",
-    "$mol_lights_toggle",
-    "$mol_lights",
-    "$mol_media",
-    "$mol_check_icon",
-    "$mol_check",
-    "$mol_button_minor",
-    "$mol_button",
-    "$mol_speck",
-    "$mol_button_typed",
-    "$mol_maybe",
-    "$mol_icon_brightness_6",
-    "$mol_icon_brightness",
+    "$mol_textarea",
+    "$mol_stack",
+    "$mol_text_code",
+    "$mol_text",
+    "$mol_text_code_row",
+    "$mol_paragraph",
+    "$mol_text_code_token",
+    "$mol_dimmer",
+    "$mol_regexp",
+    "$mol_type_merge",
+    "$mol_type_equals",
+    "$mol_type_intersect",
+    "$mol_unicode",
+    "$mol_syntax2_md",
+    "$mol_syntax2",
     "$mol_list",
     "$mol_support_css",
     "$mol_support",
-    "$mol_print",
+    "$mol_button_copy",
+    "$mol_button",
+    "$mol_speck",
+    "$mol_keyboard",
+    "$mol_button_minor",
+    "$mol_button_typed",
+    "$mol_icon_content_copy",
+    "$mol_icon_content",
+    "$mol_string",
+    "$mol_hotkey",
     "$mol_page",
-    "$mol_scroll",
-    "$mol_icon_cursor_default",
-    "$mol_icon_cursor",
-    "$hyoo_crowd_list",
-    "$mol_reconcile"
+    "$mol_view_tree2",
+    "$mol_tree2",
+    "$mol_span",
+    "$mol_tree2_from_string",
+    "$mol_tree2_from",
+    "$mol_error_syntax",
+    "$mol_error",
+    "$mol_tree2_to_string",
+    "$mol_tree2_to",
+    "$mol_view_tree2_prop",
+    "$mol_view_tree2_class",
+    "$mol_tree2_text_to_string_mapped",
+    "$mol_tree2_text_to_string",
+    "$mol_tree2_text_to",
+    "$mol_tree2_text",
+    "$mol_tree2_text_to_sourcemap",
+    "$mol_vlq",
+    "$mol_tree2_js_to_text",
+    "$mol_tree2_js_to",
+    "$mol_tree2_js",
+    "$mol_view_tree2_to_js",
+    "$mol_view_tree2_to",
+    "$mol_guard",
+    "$mol_js_eval",
+    "$mol_js"
   ],
   "dependencies": {
     "jsdom": "*",
-    "fake-indexeddb": "*",
     "chokidar": "*"
   }
 }
