--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "$mol_dev",
     "$mol_after_frame",
     "$mol_after_timeout",
+    "$mol_func_name",
+    "$mol_func",
     "$mol_key",
     "$mol_guid",
     "$mol_wire_method",
@@ -70,16 +72,16 @@
     "$mol_dom_qname",
     "$mol_wire_probe",
     "$mol_wire_watch",
+    "$mol_wire_solid",
     "$mol_const",
     "$mol_dom_render_attributes",
     "$mol_dom_render",
     "$mol_wire_async",
+    "$mol_dom_render_events",
     "$mol_plugin",
     "$mol_dom_render_styles",
     "$mol_dom_render_children",
     "$mol_dom_render_fields",
-    "$mol_func_name",
-    "$mol_func",
     "$mol_type_pick",
     "$mol_type_keys_extract",
     "$mol_type_keys",
@@ -90,20 +92,27 @@
     "$mol_type_override",
     "$mol_style_pseudo",
     "$mol_style_sheet",
-    "$mol_book2",
+    "$my_debug_select",
+    "$mol_select",
+    "$mol_pick",
+    "$mol_pop",
     "$mol_scroll",
     "$mol_print",
     "$mol_dom_listener",
-    "$mol_mem_cached",
-    "$mol_link_source",
-    "$mol_link",
+    "$mol_layer",
+    "$mol_check",
+    "$mol_button_minor",
+    "$mol_button",
+    "$mol_speck",
+    "$mol_keyboard",
+    "$mol_button_typed",
     "$mol_icon",
     "$mol_svg_root",
     "$mol_svg",
     "$mol_state_time",
     "$mol_state",
     "$mol_svg_path",
-    "$mol_state_arg",
+    "$mol_maybe",
     "$mol_locale",
     "$mol_state_local",
     "$mol_file",
@@ -111,64 +120,25 @@
     "$mol_charset",
     "$mol_charset_encoding",
     "$mol_charset_encode",
+    "$mol_mem_cached",
     "$mol_compare_array",
-    "$mol_icon_github_circle",
-    "$mol_icon_github",
-    "$mol_textarea",
-    "$mol_stack",
-    "$mol_text_code",
-    "$mol_text",
-    "$mol_text_code_row",
-    "$mol_paragraph",
-    "$mol_text_code_token",
+    "$mol_string",
+    "$mol_hotkey",
+    "$mol_icon_dots_vertical",
+    "$mol_icon_dots",
     "$mol_dimmer",
+    "$mol_paragraph",
     "$mol_regexp",
     "$mol_type_merge",
     "$mol_type_equals",
     "$mol_type_intersect",
     "$mol_unicode",
-    "$mol_syntax2_md",
-    "$mol_syntax2",
+    "$mol_nav",
     "$mol_list",
     "$mol_support_css",
     "$mol_support",
-    "$mol_button_copy",
-    "$mol_button",
-    "$mol_speck",
-    "$mol_keyboard",
-    "$mol_button_minor",
-    "$mol_button_typed",
-    "$mol_icon_content_copy",
-    "$mol_icon_content",
-    "$mol_string",
-    "$mol_hotkey",
-    "$mol_page",
-    "$mol_row",
-    "$mol_view_tree2",
-    "$mol_tree2",
-    "$mol_span",
-    "$mol_tree2_from_string",
-    "$mol_tree2_from",
-    "$mol_error_syntax",
-    "$mol_error",
-    "$mol_tree2_to_string",
-    "$mol_tree2_to",
-    "$mol_view_tree2_prop",
-    "$mol_view_tree2_class",
-    "$mol_tree2_text_to_string_mapped",
-    "$mol_tree2_text_to_string",
-    "$mol_tree2_text_to",
-    "$mol_tree2_text",
-    "$mol_tree2_text_to_sourcemap",
-    "$mol_vlq",
-    "$mol_tree2_js_to_text",
-    "$mol_tree2_js_to",
-    "$mol_tree2_js",
-    "$mol_view_tree2_to_js",
-    "$mol_view_tree2_to",
-    "$mol_guard",
-    "$mol_js_eval",
-    "$mol_js"
+    "$mol_match",
+    "$mol_icon_plus"
   ],
   "dependencies": {
     "jsdom": "*",
