--- a/package.json
+++ b/package.json
@@ -8,14 +8,10 @@
   "keywords": [
     "$my_debug",
     "$my",
-    "$mol_style_unit",
-    "$mol_style",
+    "$mol_row",
     "$mol",
-    "$mol_decor",
-    "$mol_style_define",
-    "$mol_view_view",
-    "$mol_view",
     "$mol_style_attach",
+    "$mol_style",
     "$mol_after_tick",
     "$mol_after",
     "$mol_object2",
@@ -36,8 +32,12 @@
     "$mol_term_color",
     "$mol_term",
     "$mol_env",
+    "$mol_view_view",
+    "$mol_view",
     "$mol_theme",
     "$mol_style_func",
+    "$mol_style_unit",
+    "$mol_decor",
     "$mol_gap",
     "$mol_window",
     "$mol_object",
@@ -62,10 +62,11 @@
     "$mol_wire_task",
     "$mol_compare_deep",
     "$mol_compare",
+    "$mol_type_foot",
     "$mol_type_tail",
-    "$mol_wire_plex",
     "$mol_fail_log",
     "$mol_fail_catch",
+    "$mol_wire_plex",
     "$mol_view_selection",
     "$mol_memo",
     "$mol_wrapper",
@@ -85,63 +86,18 @@
     "$mol_type_pick",
     "$mol_type_keys_extract",
     "$mol_type_keys",
-    "$mol_style_guard",
-    "$mol_type_result",
-    "$mol_type_error",
-    "$mol_style_properties",
-    "$mol_type_override",
-    "$mol_style_pseudo",
-    "$mol_style_sheet",
-    "$my_debug_select",
-    "$mol_select",
-    "$mol_pick",
-    "$mol_pop",
-    "$mol_scroll",
-    "$mol_print",
-    "$mol_dom_listener",
-    "$mol_layer",
-    "$mol_check",
-    "$mol_button_minor",
+    "$mol_button_major",
     "$mol_button",
     "$mol_speck",
+    "$mol_layer",
+    "$mol_keyboard_code",
     "$mol_keyboard",
     "$mol_button_typed",
-    "$mol_icon",
-    "$mol_svg_root",
-    "$mol_svg",
-    "$mol_state_time",
-    "$mol_state",
-    "$mol_svg_path",
-    "$mol_maybe",
-    "$mol_locale",
-    "$mol_state_local",
-    "$mol_file",
-    "$mol_charset_decode",
-    "$mol_charset",
-    "$mol_charset_encoding",
-    "$mol_charset_encode",
-    "$mol_mem_cached",
-    "$mol_compare_array",
     "$mol_string",
     "$mol_hotkey",
-    "$mol_icon_dots_vertical",
-    "$mol_icon_dots",
-    "$mol_dimmer",
-    "$mol_paragraph",
-    "$mol_regexp",
-    "$mol_type_merge",
-    "$mol_type_equals",
-    "$mol_type_intersect",
-    "$mol_unicode",
-    "$mol_nav",
-    "$mol_list",
-    "$mol_support_css",
-    "$mol_support",
-    "$mol_match",
-    "$mol_icon_plus"
+    "$mol_dom_listener"
   ],
   "dependencies": {
-    "jsdom": "*",
-    "chokidar": "*"
+    "jsdom": "*"
   }
 }
