--- a/package.json
+++ b/package.json
@@ -86,6 +86,35 @@
     "$mol_type_pick",
     "$mol_type_keys_extract",
     "$mol_type_keys",
+    "$mol_link_source",
+    "$mol_link",
+    "$mol_style_define",
+    "$mol_style_guard",
+    "$mol_type_result",
+    "$mol_type_error",
+    "$mol_style_properties",
+    "$mol_type_override",
+    "$mol_style_pseudo",
+    "$mol_style_sheet",
+    "$mol_state_arg",
+    "$mol_state",
+    "$mol_action",
+    "$mol_locale",
+    "$mol_state_local",
+    "$mol_file",
+    "$mol_charset_decode",
+    "$mol_charset",
+    "$mol_charset_encoding",
+    "$mol_charset_encode",
+    "$mol_mem_cached",
+    "$mol_compare_array",
+    "$mol_icon_github_circle",
+    "$mol_icon_github",
+    "$mol_icon",
+    "$mol_svg_root",
+    "$mol_svg",
+    "$mol_state_time",
+    "$mol_svg_path",
     "$mol_button_major",
     "$mol_button",
     "$mol_speck",
@@ -98,6 +127,7 @@
     "$mol_dom_listener"
   ],
   "dependencies": {
-    "jsdom": "*"
+    "jsdom": "*",
+    "chokidar": "*"
   }
 }
