--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "keywords": [
     "$my_debug",
     "$my",
-    "$mol_row",
-    "$mol",
-    "$mol_style_attach",
+    "$mol_style_define",
     "$mol_style",
+    "$mol",
+    "$mol_view_view",
+    "$mol_view",
+    "$mol_style_attach",
     "$mol_after_tick",
     "$mol_after",
     "$mol_object2",
@@ -32,8 +34,6 @@
     "$mol_term_color",
     "$mol_term",
     "$mol_env",
-    "$mol_view_view",
-    "$mol_view",
     "$mol_theme",
     "$mol_style_func",
     "$mol_style_unit",
@@ -86,9 +86,6 @@
     "$mol_type_pick",
     "$mol_type_keys_extract",
     "$mol_type_keys",
-    "$mol_link_source",
-    "$mol_link",
-    "$mol_style_define",
     "$mol_style_guard",
     "$mol_type_result",
     "$mol_type_error",
@@ -96,38 +93,15 @@
     "$mol_type_override",
     "$mol_style_pseudo",
     "$mol_style_sheet",
-    "$mol_state_arg",
-    "$mol_state",
-    "$mol_action",
-    "$mol_locale",
-    "$mol_state_local",
-    "$mol_file",
-    "$mol_charset_decode",
-    "$mol_charset",
-    "$mol_charset_encoding",
-    "$mol_charset_encode",
+    "$mol_list",
+    "$mol_support_css",
+    "$mol_support",
+    "$mol_print",
+    "$mol_dom_listener",
     "$mol_mem_cached",
-    "$mol_compare_array",
-    "$mol_icon_github_circle",
-    "$mol_icon_github",
-    "$mol_icon",
-    "$mol_svg_root",
-    "$mol_svg",
-    "$mol_state_time",
-    "$mol_svg_path",
-    "$mol_button_major",
-    "$mol_button",
-    "$mol_speck",
-    "$mol_layer",
-    "$mol_keyboard_code",
-    "$mol_keyboard",
-    "$mol_button_typed",
-    "$mol_string",
-    "$mol_hotkey",
-    "$mol_dom_listener"
+    "$mol_range2"
   ],
   "dependencies": {
-    "jsdom": "*",
-    "chokidar": "*"
+    "jsdom": "*"
   }
 }
