--- a/package.json
+++ b/package.json
@@ -93,15 +93,38 @@
     "$mol_type_override",
     "$mol_style_pseudo",
     "$mol_style_sheet",
+    "$mol_page",
+    "$mol_scroll",
+    "$mol_print",
+    "$mol_dom_listener",
+    "$mol_link_source",
+    "$mol_link",
+    "$mol_state_arg",
+    "$mol_state",
+    "$mol_action",
+    "$mol_locale",
+    "$mol_state_local",
+    "$mol_file",
+    "$mol_charset_decode",
+    "$mol_charset",
+    "$mol_charset_encoding",
+    "$mol_charset_encode",
+    "$mol_mem_cached",
+    "$mol_compare_array",
+    "$mol_icon_github_circle",
+    "$mol_icon_github",
+    "$mol_icon",
+    "$mol_svg_root",
+    "$mol_svg",
+    "$mol_state_time",
+    "$mol_svg_path",
     "$mol_list",
     "$mol_support_css",
     "$mol_support",
-    "$mol_print",
-    "$mol_dom_listener",
-    "$mol_mem_cached",
     "$mol_range2"
   ],
   "dependencies": {
-    "jsdom": "*"
+    "jsdom": "*",
+    "chokidar": "*"
   }
 }
