Deployed using Blazing fast GitHub Pages deploy

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "keywords": [
     "$my_debug",
     "$my",
-    "$mol_style_define",
+    "$mol_style_unit",
     "$mol_style",
     "$mol",
+    "$mol_decor",
+    "$mol_style_define",
     "$mol_view_view",
     "$mol_view",
     "$mol_style_attach",
@@ -36,8 +38,6 @@
     "$mol_env",
     "$mol_theme",
     "$mol_style_func",
-    "$mol_style_unit",
-    "$mol_decor",
     "$mol_gap",
     "$mol_window",
     "$mol_object",
@@ -93,35 +93,47 @@
     "$mol_type_override",
     "$mol_style_pseudo",
     "$mol_style_sheet",
-    "$mol_page",
+    "$mol_book2",
     "$mol_scroll",
     "$mol_print",
     "$mol_dom_listener",
-    "$mol_link_source",
-    "$mol_link",
-    "$mol_state_arg",
-    "$mol_state",
-    "$mol_action",
+    "$mol_mem_cached",
     "$mol_locale",
     "$mol_state_local",
+    "$mol_state",
     "$mol_file",
     "$mol_charset_decode",
     "$mol_charset",
     "$mol_charset_encoding",
     "$mol_charset_encode",
-    "$mol_mem_cached",
     "$mol_compare_array",
-    "$mol_icon_github_circle",
-    "$mol_icon_github",
+    "$mol_button_minor",
+    "$mol_button",
+    "$mol_speck",
+    "$mol_layer",
+    "$mol_keyboard_code",
+    "$mol_keyboard",
+    "$mol_button_typed",
+    "$mol_number",
+    "$mol_string",
+    "$mol_hotkey",
+    "$mol_icon_minus",
     "$mol_icon",
     "$mol_svg_root",
     "$mol_svg",
     "$mol_state_time",
     "$mol_svg_path",
+    "$mol_icon_plus",
+    "$mol_form_field",
+    "$mol_form",
     "$mol_list",
     "$mol_support_css",
     "$mol_support",
-    "$mol_range2"
+    "$mol_row",
+    "$mol_labeler",
+    "$mol_page",
+    "$mol_portion",
+    "$mol_action"
   ],
   "dependencies": {
     "jsdom": "*",
