--- a/package.json
+++ b/package.json
@@ -98,15 +98,26 @@
     "$mol_print",
     "$mol_dom_listener",
     "$mol_mem_cached",
+    "$mol_link_source",
+    "$mol_link",
+    "$mol_state_arg",
+    "$mol_state",
+    "$mol_action",
     "$mol_locale",
     "$mol_state_local",
-    "$mol_state",
     "$mol_file",
     "$mol_charset_decode",
     "$mol_charset",
     "$mol_charset_encoding",
     "$mol_charset_encode",
     "$mol_compare_array",
+    "$mol_icon_github_circle",
+    "$mol_icon_github",
+    "$mol_icon",
+    "$mol_svg_root",
+    "$mol_svg",
+    "$mol_state_time",
+    "$mol_svg_path",
     "$mol_button_minor",
     "$mol_button",
     "$mol_speck",
@@ -118,11 +129,6 @@
     "$mol_string",
     "$mol_hotkey",
     "$mol_icon_minus",
-    "$mol_icon",
-    "$mol_svg_root",
-    "$mol_svg",
-    "$mol_state_time",
-    "$mol_svg_path",
     "$mol_icon_plus",
     "$mol_form_field",
     "$mol_form",
@@ -132,8 +138,7 @@
     "$mol_row",
     "$mol_labeler",
     "$mol_page",
-    "$mol_portion",
-    "$mol_action"
+    "$mol_portion"
   ],
   "dependencies": {
     "jsdom": "*",
