--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
   "name": "my_debug",
   "version": "0.0.1",
-  "main": "node.js",
-  "module": "node.esm.js",
-  "browser": "web.js",
-  "types": "web.d.ts",
+  "exports": {
+    "node": {
+      "import": "./node.mjs",
+      "default": "./node.js"
+    },
+    "types": "./web.d.ts",
+    "import": "./web.mjs",
+    "default": "./web.js"
+  },
+  "main": "./web.js",
+  "module": "./web.mjs",
+  "browser": "./web.js",
+  "types": "./web.d.ts",
   "keywords": [
     "$my_debug",
     "$my",
-    "$mol_style_unit",
-    "$mol_style",
+    "$mol_book2",
     "$mol",
-    "$mol_decor",
-    "$mol_style_define",
+    "$mol_scroll",
     "$mol_view_view",
     "$mol_view",
-    "$mol_style_attach",
-    "$mol_after_tick",
-    "$mol_after",
+    "$mol_window",
+    "$mol_object",
     "$mol_object2",
     "$mol_ambient",
     "$mol_owning",
@@ -26,21 +32,6 @@
     "$mol_fail",
     "$mol_type_writable",
     "$mol_type",
-    "$mol_dom_context",
-    "$mol_dom",
-    "$node",
-    "$node_modules",
-    "$mol_exec",
-    "$mol_log3",
-    "$mol_tree",
-    "$mol_term_color",
-    "$mol_term",
-    "$mol_env",
-    "$mol_theme",
-    "$mol_style_func",
-    "$mol_gap",
-    "$mol_window",
-    "$mol_object",
     "$mol_mem",
     "$mol_wire_solo",
     "$mol_wire",
@@ -53,7 +44,10 @@
     "$mol_dev_format",
     "$mol_dev",
     "$mol_after_frame",
+    "$mol_after",
     "$mol_after_timeout",
+    "$mol_promise_like",
+    "$mol_promise",
     "$mol_func_name",
     "$mol_func",
     "$mol_key",
@@ -67,7 +61,26 @@
     "$mol_fail_log",
     "$mol_fail_catch",
     "$mol_wire_plex",
+    "$mol_dom_context",
+    "$mol_dom",
+    "$node",
+    "$node_modules",
+    "$mol_exec",
+    "$mol_log3",
+    "$mol_tree2_from_json",
+    "$mol_tree2_from",
+    "$mol_tree2",
+    "$mol_span",
+    "$mol_tree2_from_string",
+    "$mol_error_syntax",
+    "$mol_error",
+    "$mol_tree2_to_string",
+    "$mol_tree2_to",
+    "$mol_term_color",
+    "$mol_term",
+    "$mol_env",
     "$mol_view_selection",
+    "$mol_after_tick",
     "$mol_memo",
     "$mol_wrapper",
     "$mol_dom_qname",
@@ -86,62 +99,90 @@
     "$mol_type_pick",
     "$mol_type_keys_extract",
     "$mol_type_keys",
+    "$mol_style_attach",
+    "$mol_style",
+    "$mol_theme",
+    "$mol_style_func",
+    "$mol_style_unit",
+    "$mol_decor",
+    "$mol_gap",
+    "$mol_print",
+    "$mol_dom_listener",
+    "$mol_style_define",
     "$mol_style_guard",
-    "$mol_type_result",
-    "$mol_type_error",
     "$mol_style_properties",
     "$mol_type_override",
     "$mol_style_pseudo",
+    "$mol_type_error",
     "$mol_style_sheet",
-    "$mol_book2",
-    "$mol_scroll",
-    "$mol_print",
-    "$mol_dom_listener",
     "$mol_mem_cached",
-    "$mol_link_source",
-    "$mol_link",
-    "$mol_state_arg",
-    "$mol_state",
-    "$mol_action",
-    "$mol_locale",
-    "$mol_state_local",
-    "$mol_file",
-    "$mol_charset_decode",
-    "$mol_charset",
-    "$mol_charset_encoding",
-    "$mol_charset_encode",
-    "$mol_compare_array",
-    "$mol_icon_github_circle",
-    "$mol_icon_github",
-    "$mol_icon",
-    "$mol_svg_root",
-    "$mol_svg",
-    "$mol_state_time",
-    "$mol_svg_path",
-    "$mol_button_minor",
+    "$mol_button_major",
     "$mol_button",
     "$mol_speck",
     "$mol_layer",
     "$mol_keyboard_code",
     "$mol_keyboard",
     "$mol_button_typed",
-    "$mol_number",
-    "$mol_string",
-    "$mol_hotkey",
-    "$mol_icon_minus",
-    "$mol_icon_plus",
-    "$mol_form_field",
-    "$mol_form",
+    "$mol_locale",
+    "$mol_state_local",
+    "$mol_state",
+    "$mol_file",
+    "$mol_charset_decode",
+    "$mol_charset",
+    "$mol_charset_encoding",
+    "$mol_charset_encode",
+    "$mol_compare_array",
+    "$mol_wire_sync",
+    "$hyoo_lingua_translate",
+    "$hyoo_lingua",
+    "$hyoo",
+    "$mol_huggingface",
+    "$mol_fetch",
+    "$mol_action",
+    "$mol_dom_parse",
+    "$mol_dump_list",
+    "$mol_dump",
+    "$mol_dump_value",
+    "$mol_text_code",
+    "$mol_text",
+    "$mol_stack",
+    "$mol_text_code_row",
+    "$mol_paragraph",
+    "$mol_text_code_token",
+    "$mol_dimmer",
+    "$mol_regexp",
+    "$mol_type_merge",
+    "$mol_type_equals",
+    "$mol_type_intersect",
+    "$mol_unicode",
+    "$mol_syntax2_md",
+    "$mol_syntax2",
     "$mol_list",
     "$mol_support_css",
     "$mol_support",
-    "$mol_row",
-    "$mol_labeler",
-    "$mol_page",
-    "$mol_portion"
+    "$mol_button_copy",
+    "$mol_button_minor",
+    "$mol_blob",
+    "$mol_icon_clipboard_outline",
+    "$mol_icon_clipboard",
+    "$mol_icon",
+    "$mol_svg_root",
+    "$mol_svg",
+    "$mol_state_time",
+    "$mol_svg_path",
+    "$mol_html_encode",
+    "$mol_html",
+    "$mol_check_expand",
+    "$mol_check",
+    "$mol_maybe",
+    "$mol_icon_chevron",
+    "$mol_expander",
+    "$mol_try",
+    "$mol_page"
   ],
   "dependencies": {
     "jsdom": "*",
-    "chokidar": "*"
+    "chokidar": "*",
+    "undici": "*"
   }
 }
