--- a/package.json
+++ b/package.json
@@ -116,16 +116,13 @@
     "$mol_type_error",
     "$mol_style_sheet",
     "$mol_mem_cached",
-    "$mol_button_major",
-    "$mol_button",
-    "$mol_speck",
-    "$mol_layer",
-    "$mol_keyboard_code",
-    "$mol_keyboard",
-    "$mol_button_typed",
+    "$mol_link_source",
+    "$mol_link",
+    "$mol_state_arg",
+    "$mol_state",
+    "$mol_action",
     "$mol_locale",
     "$mol_state_local",
-    "$mol_state",
     "$mol_file",
     "$mol_charset_decode",
     "$mol_charset",
@@ -138,8 +135,21 @@
     "$hyoo",
     "$mol_huggingface",
     "$mol_fetch",
-    "$mol_action",
     "$mol_dom_parse",
+    "$mol_icon_github_circle",
+    "$mol_icon_github",
+    "$mol_icon",
+    "$mol_svg_root",
+    "$mol_svg",
+    "$mol_state_time",
+    "$mol_svg_path",
+    "$mol_button_major",
+    "$mol_button",
+    "$mol_speck",
+    "$mol_layer",
+    "$mol_keyboard_code",
+    "$mol_keyboard",
+    "$mol_button_typed",
     "$mol_dump_list",
     "$mol_dump",
     "$mol_dump_value",
@@ -165,11 +175,6 @@
     "$mol_blob",
     "$mol_icon_clipboard_outline",
     "$mol_icon_clipboard",
-    "$mol_icon",
-    "$mol_svg_root",
-    "$mol_svg",
-    "$mol_state_time",
-    "$mol_svg_path",
     "$mol_html_encode",
     "$mol_html",
     "$mol_check_expand",
