--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "$mol_fail",
     "$mol_type_writable",
     "$mol_type",
+    "$mol_func_name",
+    "$mol_func",
     "$mol_mem",
     "$mol_wire_solo",
     "$mol_wire",
@@ -43,29 +45,17 @@
     "$mol_wire_pub_sub",
     "$mol_dev_format",
     "$mol_dev",
-    "$mol_after_frame",
-    "$mol_after",
     "$mol_after_timeout",
+    "$mol_after",
     "$mol_promise_like",
     "$mol_promise",
-    "$mol_func_name",
-    "$mol_func",
     "$mol_key",
     "$mol_guid",
+    "$mol_after_frame",
     "$mol_wire_method",
     "$mol_wire_task",
     "$mol_compare_deep",
     "$mol_compare",
-    "$mol_type_foot",
-    "$mol_type_tail",
-    "$mol_fail_log",
-    "$mol_fail_catch",
-    "$mol_wire_plex",
-    "$mol_dom_context",
-    "$mol_dom",
-    "$node",
-    "$node_modules",
-    "$mol_exec",
     "$mol_log3",
     "$mol_tree2_from_json",
     "$mol_tree2_from",
@@ -78,6 +68,16 @@
     "$mol_tree2_to",
     "$mol_term_color",
     "$mol_term",
+    "$mol_type_foot",
+    "$mol_type_tail",
+    "$mol_fail_log",
+    "$mol_fail_catch",
+    "$mol_wire_plex",
+    "$mol_dom_context",
+    "$mol_dom",
+    "$node",
+    "$node_modules",
+    "$mol_exec",
     "$mol_env",
     "$mol_view_selection",
     "$mol_after_tick",
@@ -86,108 +86,98 @@
     "$mol_dom_qname",
     "$mol_wire_probe",
     "$mol_wire_watch",
-    "$mol_wire_solid",
     "$mol_const",
+    "$mol_wire_solid",
     "$mol_dom_render_attributes",
     "$mol_dom_render",
-    "$mol_wire_async",
     "$mol_dom_render_events",
     "$mol_plugin",
     "$mol_dom_render_styles",
     "$mol_dom_render_children",
     "$mol_dom_render_fields",
+    "$mol_wire_async",
     "$mol_type_pick",
     "$mol_type_keys_extract",
     "$mol_type_keys",
     "$mol_style_attach",
     "$mol_style",
     "$mol_theme",
+    "$mol_style_prop",
     "$mol_style_func",
     "$mol_style_unit",
     "$mol_decor",
+    "$mol_style_properties",
+    "$mol_type_override",
     "$mol_gap",
     "$mol_print",
     "$mol_dom_listener",
     "$mol_style_define",
     "$mol_style_guard",
-    "$mol_style_properties",
-    "$mol_type_override",
     "$mol_style_pseudo",
     "$mol_type_error",
     "$mol_style_sheet",
     "$mol_mem_cached",
+    "$mol_layer",
+    "$mol_type_enforce",
     "$mol_link_source",
     "$mol_link",
     "$mol_state_arg",
     "$mol_state",
     "$mol_action",
+    "$mol_icon_script_text",
+    "$mol_icon_script",
+    "$mol_icon",
+    "$mol_svg_root",
+    "$mol_svg",
+    "$mol_state_time",
+    "$mol_svg_path",
     "$mol_locale",
     "$mol_state_local",
+    "$mol_storage",
+    "$mol_mem_persist",
+    "$mol_wire_sync",
     "$mol_file",
     "$mol_charset_decode",
     "$mol_charset",
     "$mol_charset_encoding",
     "$mol_charset_encode",
     "$mol_compare_array",
-    "$mol_wire_sync",
-    "$hyoo_lingua_translate",
-    "$hyoo_lingua",
-    "$hyoo",
-    "$mol_huggingface",
-    "$mol_fetch",
-    "$mol_dom_parse",
-    "$mol_icon_github_circle",
-    "$mol_icon_github",
-    "$mol_icon",
-    "$mol_svg_root",
-    "$mol_svg",
-    "$mol_state_time",
-    "$mol_svg_path",
-    "$mol_button_major",
+    "$mol_time_moment",
+    "$mol_time",
+    "$mol_time_duration",
+    "$mol_time_base",
+    "$mol_date",
+    "$mol_pick",
+    "$mol_pop",
+    "$mol_check",
+    "$mol_button_minor",
     "$mol_button",
     "$mol_speck",
-    "$mol_layer",
     "$mol_keyboard_code",
     "$mol_keyboard",
     "$mol_button_typed",
-    "$mol_dump_list",
-    "$mol_dump",
-    "$mol_dump_value",
-    "$mol_text_code",
-    "$mol_text",
-    "$mol_stack",
-    "$mol_text_code_row",
-    "$mol_paragraph",
-    "$mol_text_code_token",
-    "$mol_dimmer",
-    "$mol_regexp",
-    "$mol_type_merge",
-    "$mol_type_equals",
-    "$mol_type_intersect",
-    "$mol_unicode",
-    "$mol_syntax2_md",
-    "$mol_syntax2",
+    "$mol_maybe",
+    "$mol_icon_calendar_today",
+    "$mol_icon_calendar",
+    "$mol_format",
+    "$mol_string",
+    "$mol_hotkey",
+    "$mol_icon_trash_can_outline",
+    "$mol_icon_trash_can",
+    "$mol_icon_trash",
+    "$mol_icon_chevron_left",
+    "$mol_icon_chevron",
+    "$mol_icon_chevron_right",
+    "$mol_calendar",
     "$mol_list",
     "$mol_support_css",
     "$mol_support",
-    "$mol_button_copy",
-    "$mol_button_minor",
-    "$mol_blob",
-    "$mol_icon_clipboard_outline",
-    "$mol_icon_clipboard",
-    "$mol_html_encode",
-    "$mol_html",
-    "$mol_check_expand",
-    "$mol_check",
-    "$mol_maybe",
-    "$mol_icon_chevron",
-    "$mol_expander",
+    "$mol_hor",
     "$mol_try",
     "$mol_page"
   ],
   "dependencies": {
     "jsdom": "*",
-    "chokidar": "*",
-    "undici": "*"
+    "chokidar": "*"
   }
 }
